{
  "@@locale": "en",
  "addNew": "Add new",
  "andAtLeastOne": "and at least one ",
  "create": "Create",
  "customer": "Customer",
  "invoice": "Invoice",
  "itemIsRequired": "item is required",
  "login": "Login",
  "loginWithExistingUserName": "Login with Existing user name",
  "logout": "Logout",
  "order": "Order",
  "payment": "Payment",
  "registerNewCompanyAndAdmin": "Register new Company and Administrator",
  "selectLanguage": "Select Language",
  "shipment": "Shipment",
  "supplier": "Supplier",
  "transaction": "Transaction",
  "unknown": "Unknown",
  "update": "update",
  "welcomeToGrowERPBusinessSystem": "Welcome to The GrowERP Business System"
}
