...
                              });
                            })),
                    SizedBox(height: 10),
                    Row(children: [
                      Expanded(
                          child: ElevatedButton(
                              key: Key('newCompany'),
                              child: Text('Register AND create a new Company'),
                              onPressed: () {
                                if (_formKey.currentState!.validate())
                                  context
                                      .read<AuthBloc>()
                                      .add(AuthRegisterCompanyAndAdmin(
...
